--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@mantine/hooks": "^6.0.8",
     "@radix-ui/react-slot": "^1.0.1",
     "@tabler/icons-react": "^2.16.0",
+    "keen-slider": "^6.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
-    "swiper": "^9.2.3"
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
