--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/hooks": "^6.0.8",
     "@radix-ui/react-slot": "^1.0.1",
+    "@splinetool/react-spline": "^2.2.6",
     "@tabler/icons-react": "^2.16.0",
     "keen-slider": "^6.8.5",
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/three": "^0.150.2",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.22",
