--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-slot": "^1.0.1",
     "@splinetool/react-spline": "^2.2.6",
     "@tabler/icons-react": "^2.16.0",
+    "@unocss/autocomplete": "^0.51.8",
+    "@unocss/reset": "^0.51.8",
     "keen-slider": "^6.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,12 +24,10 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/three": "^0.150.2",
+    "@unocss/preset-wind": "^0.51.8",
     "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.22",
-    "tailwind-scrollbar": "^3.0.0",
-    "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
+    "unocss": "^0.51.8",
     "vite": "^4.2.0"
   }
 }
