--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tabler/icons-react": "^2.16.0",
     "@unocss/autocomplete": "^0.51.8",
     "@unocss/reset": "^0.51.8",
+    "framer-motion": "^10.12.12",
     "keen-slider": "^6.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
